# advent_of_code_2024

./: CMakeLists.txt
solutions/: solution1.cpp  solution2.cpp  solution2.h  solution3.cpp  solution3.h  solution4.cpp  solution4.h  solution5.cpp  solution5.h  solution6.cpp  solution6.h  solution7.cpp  solution7.h  solution8.cpp  solution8.h  solutions.cpp  solutions.h
utils/: functional.h  read.cpp  read.h
